[gd_scene load_steps=9 format=3 uid="uid://cjdpswnfq73sm"]

[ext_resource type="Script" uid="uid://di16memf0nug8" path="res://dialogue_box.gd" id="1_senjy"]

[sub_resource type="Theme" id="Theme_senjy"]
default_base_scale = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n23yb"]
bg_color = Color(0.137255, 0.933333, 0.760784, 0.47451)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.266667, 0.823529, 0.733333, 0.901961)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.10748, 0.10748, 0.10748, 0.6)
shadow_size = 8

[sub_resource type="Theme" id="Theme_0nste"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_if77y"]
bg_color = Color(0.199666, 0.616457, 0.875957, 0.643137)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_senjy"]
bg_color = Color(0.2, 0.615686, 0.87451, 0.643137)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0nste"]
bg_color = Color(0.2, 0.615686, 0.87451, 0.643137)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_351bv"]
bg_color = Color(0.2, 0.615686, 0.87451, 0.643137)

[node name="DialogueBox" type="CanvasLayer"]
script = ExtResource("1_senjy")

[node name="Panel" type="Panel" parent="."]
offset_right = 383.416
offset_bottom = 192.0
theme = SubResource("Theme_senjy")
theme_override_styles/panel = SubResource("StyleBoxFlat_n23yb")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 403.0
offset_bottom = 43.0
text = "У меня много всего. Что тебе нужно?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MessageLabel" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 20.0
offset_top = 100.0
offset_right = 363.0
offset_bottom = 123.0
theme_override_colors/font_color = Color(0.890196, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 0
offset_top = 15.0
offset_right = 383.0
offset_bottom = 194.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="spear" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_0nste")
theme_override_styles/focus = SubResource("StyleBoxFlat_if77y")
text = "Копьё"

[node name="drum" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_senjy")
text = "Барабан дождя"

[node name="other" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_0nste")
text = "Другое"

[node name="cancel" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_351bv")
text = "Отмена"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/spear" to="." method="_on_spear_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/drum" to="." method="_on_drum_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/other" to="." method="_on_other_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/cancel" to="." method="_on_cancel_button_pressed"]
